Concurrency correctness test for AsyncServletOutputStreamWriter